# FlipFlopper

./: .continues-handoff.md  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PLANNING-ARCHITECTURE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/: context.md  download_icons.py  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
docs/: README.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  LICENSE  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  editor.rs  env.rs  git.rs  handoff.rs  lib.rs  lsp.rs  main.rs  preview.rs  project.rs  pty.rs  review.rs  runner.rs  session.rs  tools.rs  windows.rs  worktree.rs
src-tauri/src/ui/: agent_bar.rs  app.rs  dialogs.rs  file_tree.rs  git_panel.rs  mod.rs  prompt.rs  sidebar.rs  state.rs  terminal.rs
src/components/: AgentBar.tsx  AgentTaskDialog.tsx  AgentWorkspace.tsx  BranchIndicator.tsx  CommitTimeline.tsx  DiffPane.tsx  DiffxPane.tsx  EditorPane.tsx  FileTree.tsx  IconMark.tsx  NewProjectWizard.tsx  OmniSearch.tsx  PreviewPane.tsx  PreviewPanel.tsx  ProjectPicker.tsx  ProjectTabStrip.tsx  PromptComposer.tsx  RunButton.tsx  SettingsPanel.tsx  ShortcutHelp.tsx  Sidebar.tsx  TerminalPane.tsx  TerminalPanel.tsx  ToolInstaller.tsx  UpdateDialog.tsx  ValidationButton.tsx  YoloButton.tsx  ui.tsx
src/components/flow/: AddStepMenu.tsx  FlowCanvas.tsx  FlowEdges.tsx  FlowNodeCard.tsx  OrchestratorPanel.tsx
src/components/git/: ChangesTab.tsx  ConflictFixDialog.tsx  GitPanel.tsx  HistoryTab.tsx  SquashPushDialog.tsx  SyncHeader.tsx  WorktreeCloseDialog.tsx
src/lib/: agentMeta.ts  agentMeta.tsx  appPrefs.ts  cmTheme.ts  constants.ts  fileIcons.ts  ipc.ts  markdownLite.ts  native.ts  orchestrator.ts  settings.ts  shortcuts.ts  store.ts  terminalCache.ts  updater.ts  usages.ts  useResizable.ts
