[package]
name = "flipflopper"
version = "0.9.0"
description = "Multi-agent CLI cockpit — better UX for AI coding tools"
authors = ["araujojordan"]
edition = "2021"
license = "MIT"

[lib]
name = "flipflopper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener  = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-os      = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
regex               = "1"
lsp-types           = "0.97"

# PTY — cross-platform terminal multiplexing (Unix + Windows ConPTY)
portable-pty  = "0.8"

# Session IDs
uuid          = { version = "1", features = ["v4"] }

# Binary detection for agent/tool discovery
which         = "6"

# .gitignore-aware directory walker (ripgrep's ignore crate)
ignore        = "0.4"

# Async for background tasks
tokio         = { version = "1", features = ["full"] }

# Home directory detection (cross-platform)
dirs          = "5"

# SQLite for reading OpenCode session storage
rusqlite      = { version = "0.31", features = ["bundled"] }
